# advent-of-code-2025

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
01/: main.py
02/: main.py
03/: main.py
04/: main.py
05/: main.py
06/: main.py
07/: main.py
08/: main.py
09/: main.py
10/: main.py
11/: main.py
12/: main.py
scripts/: config.sh
scripts/command/: delete.sh  new.sh  test.sh
