[project]
name = ""
version = ""
description = ""
authors = [{ name = "Yifan Wu", email = "tyivanwu@gmail.com" }]
dependencies = [
    "black>=22.10.0",
    "ipython>=8.7.0",
    "sortedcontainers>=2.4.0",
    "sympy>=1.12",
    "tqdm>=4.66.1",
    "numpy>=1.26.2",
    "pre-commit>=3.6.0",
    "scipy>=1.11.4",
    "z3-solver>=4.12.4.0",
    "graphviz>=0.20.1",
    "networkx>=3.2.1",
]
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"

[tool]
[tool.pdm]
[tool.pdm.scripts]
new = "bash scripts/command/new.sh"
delete = "bash scripts/command/delete.sh"
test = "bash scripts/command/test.sh"
lint = "pre-commit run --all-files"
